--- a/example/sass/style.scss
+++ b/example/sass/style.scss
@@ -79,10 +79,11 @@ body {
 #wrapper {
 	max-width: 43.75em; // 700px
 	margin: 0 auto;
+	padding: 0 1%;
 }
 
 .intro {
-	padding: 10% 5% 5%;
+	padding: 10% 3% 5%;
 
 	h1 {
 		text-transform: uppercase;
