--- a/style.css
+++ b/style.css
@@ -642,10 +642,11 @@ body {
 #wrapper {
   max-width: 43.75em;
   margin: 0 auto;
+  padding: 0 1%;
 }
 
 .intro {
-  padding: 10% 5% 5%;
+  padding: 10% 3% 5%;
 }
 .intro h1 {
   text-transform: uppercase;
